# RiskAgent-AgenticRAG

./: .coverage  .env.example  .gitattributes  .gitignore  .pylintrc  COVERAGE_REPORT.md  COVERAGE_SUMMARY.txt  Makefile  README.md  coverage.json  demo_cli.py  environment.yml  gradio_app.py  langgraph.json  main.py  pyproject.toml  requirements-lock.txt  requirements.txt  run_full_eval.sh  smoke_test.py
.github/workflows/: ci.yml  nightly-eval.yml
.trae/documents/: 移除 Pylint 配置与依赖.md  重构项目结构与代码优化计划.md
config/: eval_thresholds.json
corpus/: Background.md  BusinessObjects.md
corpus/acceptance/: cva_cfi.md  frtb_icma.md  greeks_gundersen.md
corpus/regulatory_seed/: _seed_download_failures.json
deploy/dev/: docker-compose.yml
deploy/prod/: docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DATA.md  DEPLOYMENT.md  EVALUATION.md  FEATURES.md  HIGHLIGHT.md  IMPROVEMENTS_SUMMARY.md  INDEX.md  INTERVIEW.md  LANGSMITH_SETUP.md  METRICS_UPGRADE_SUMMARY.md  OVERVIEW.md  PRD.md  PROFILING.md  PROJECT_TOUR.md  QUERY.md  QUICKSTART.md  README.md  RENAME.md  RESUME.md  ROADMAP.md  SETUP.md  STRATEGY.md  TIMELINE_EXPLAINABILITY.md  TRACE.md  eval_thresholds.yaml  langgraph_visualization.md
docs/decisions/: ADR-001-unified-retrieval-pipeline.md  ADR-002-evidence-first-validation.md  ADR-003-evaluation-first-release-gate.md  RFC-001-retrieval-hardening-roadmap.md
docs/phases/: phase-0-alignment.md  phase-1-unified-rag-pipeline.md  phase-2-corpus-gap-analysis.md  phase-2-retrieval-hardening.md  phase-3-evaluation-hardening.md  phase-4-release-readiness.md
models/embeddings/sentence-transformers__all-MiniLM-L6-v2/: config_sentence_transformers.json
scripts/: questions.json  release_acceptance.sh  run_offline_regression.sh  run_questions.py  visualize_graph.py
src/riskagent_agenticrag/: __init__.py  app.py  cache.py  constants.py  exceptions.py
src/riskagent_agenticrag/agents/: __init__.py  data_agent.py
src/riskagent_agenticrag/api/: __init__.py  schemas.py  server.py
src/riskagent_agenticrag/artifacts/: __init__.py  storage.py
src/riskagent_agenticrag/cli/: __init__.py  __main__.py  index.py
src/riskagent_agenticrag/config/: __init__.py  langsmith.py  settings.py
src/riskagent_agenticrag/contracts/: __init__.py  structured.py
src/riskagent_agenticrag/evaluation/: __init__.py  advanced_metrics.py  answer_eval.py  citation_precision.py  compute_metric.py  dataset.py  domain_consistency.py  judge_llm.py  ragas_integration.py  ragas_metrics.py  report_generator.py  reporting.py  run.py  run_full_eval.sh  thresholds.py
src/riskagent_agenticrag/indexing/: __init__.py  indexer.py  milvus_store.py
src/riskagent_agenticrag/llm/: __init__.py  generate.py  governance.py  llm_cache.py  token_tracker.py
src/riskagent_agenticrag/orchestration/: __init__.py  langgraph_runner.py  nodes.py  state.py  trace.py
src/riskagent_agenticrag/rag/: __init__.py  advanced_index.py  advanced_index_retriever.py  agentic_primitives.py  chunking.py  dense_milvus_retriever.py  embeddings.py  hybrid_retriever.py  ingestion.py  pipeline.py  query_intelligence.py  retriever_factory.py  self_rag.py  source_loader.py  sparse_index.py  utils.py
src/riskagent_agenticrag/tools/: __init__.py
src/riskagent_agenticrag/validators/: __init__.py  gates.py
src/riskagent_rag/: app.py
src/riskagent_rag/agents/: __init__.py  data_agent.py
src/riskagent_rag/api/: schemas.py  server.py
src/riskagent_rag/artifacts/: __init__.py  storage.py
src/riskagent_rag/cli/: __main__.py  index.py
src/riskagent_rag/config/: __init__.py  langsmith.py  settings.py
src/riskagent_rag/contracts/: __init__.py  structured.py  week3.py
tests/: __init__.py  conftest.py  test_advanced_indexing.py  test_advanced_metrics.py  test_answer_eval.py  test_api_v1.py  test_citation_precision.py  test_contract_artifacts_validator.py  test_contract_langgraph.py  test_contract_milestone1_acceptance.py  test_domain_consistency.py  test_evaluation_dataset.py  test_evaluation_ragas_integration.py  test_evaluation_reporting.py  test_failure_taxonomy_coverage.py  test_hybrid_rerank.py  test_index_incremental_acceptance.py  test_integration_cache.py  test_integration_config.py  test_integration_exceptions.py  test_integration_frtb_real_middleware_artifact.py  test_integration_llm_governance.py  test_milestone1_acceptance.py  test_milestone2_acceptance.py  test_milestone3_acceptance.py  test_milestone4_acceptance.py  test_numeric_tool_use.py  test_pdf_and_chunking.py  test_performance.py  test_query_routing.py  test_retrieval_highlights.py  test_self_rag.py  test_threshold_gate.py  test_tracing.py  test_unified_retriever_factory.py  test_week10_advanced_indexing_acceptance.py  test_week11_self_rag_acceptance.py  test_week12_api_v1_acceptance.py  test_week13_trace_acceptance.py  test_week14_advanced_metrics.py  (+20 more)
tests/data/: eval_set.json  gate_labels.json  qrels.json  qrels_gap_allowlist.json  questions.json  week5_refusal_set.json
tests/performance/: test_concurrency.py  test_load.py
tests/scenario/: test_error_scenarios.py  test_main_flow.py
tests/smoke/: test_smoke.py
tests/unit/: test_advanced_index_retriever.py  test_api_server.py  test_app.py  test_artifacts.py  test_hybrid_retriever.py  test_indexing.py  test_llm_generate.py  test_orchestration_nodes.py  test_orchestration_runner.py  test_rag_agentic_primitives.py  test_rag_ingestion.py  test_rag_source_loader.py  test_validators_gates.py
tools/profiling/: profile_e2e.py
(+49 files in other folders)
