[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riskagent-agenticrag"
version = "0.1.0"
description = "RiskAgent-AgenticRAG System"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-huggingface",
    "sentence-transformers",
    "pymilvus[milvus_lite]",
    "pydantic",
    "python-dotenv",
    "pypdf",
    "rank-bm25",
    "fastapi",
    "uvicorn",
    "prometheus-client",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
extraPaths = ["src"]
