[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riskagent-agenticrag"
version = "0.1.0"
description = "RiskAgent-AgenticRAG System"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-huggingface",
    "sentence-transformers",
    "pymilvus[milvus_lite]",
    "pydantic",
    "python-dotenv",
    "pypdf",
    "rank-bm25",
    "fastapi",
    "uvicorn",
    "prometheus-client",
    "httpx",
    # Document processing
    "python-docx>=0.8.11",  # Word文档处理
    "pandas>=1.3.0",        # Excel处理依赖
    "openpyxl>=3.0.0",      # .xlsx格式支持
    "xlrd>=2.0.0",          # .xls格式支持
    "beautifulsoup4>=4.9.0",  # HTML解析
    "lxml>=4.6.0",          # HTML解析器
    "tabulate>=0.8.0",      # DataFrame转markdown表格
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
extraPaths = ["src"]
