[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riskagent-agenticrag"
version = "0.1.0"
description = "RiskAgent-AgenticRAG System"
dependencies = [
    "langgraph>=0.2.0,<0.3.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "langchain-huggingface>=0.1.0,<0.2.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "pymilvus[milvus_lite]>=2.4.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pypdf>=4.0.0,<5.0.0",
    "rank-bm25>=0.2.0,<0.3.0",
    "fastapi>=0.115.0,<0.116.0",
    "email-validator>=2.2.0,<3.0.0",
    "uvicorn>=0.32.0,<0.33.0",
    "protobuf>=5.29.0,<7.0.0",
    "prometheus-client>=0.20.0,<0.21.0",
    "httpx>=0.27.0,<0.28.0",
    "redis>=5.0.0,<6.0.0",
    "structlog>=24.0.0,<25.0.0",
    "slowapi>=0.1.0,<0.2.0",
    "limits>=3.0.0,<4.0.0",
    # Document processing
    "python-docx>=1.1.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "xlrd>=2.0.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.0.0,<6.0.0",
    "tabulate>=0.9.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pyright>=1.1.0,<2.0.0",
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "ruff>=0.4.0,<0.5.0",
    "pre-commit>=3.7.0,<4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "error",
    # LangChain 弃用 (pydantic_v1 / class-validator / HuggingFaceEmbeddings)
    "ignore::langchain_core._api.deprecation.LangChainDeprecationWarning",
    "ignore:.*allowed_objects.*",
    "ignore:.*pydantic_v1.*",
    "ignore:.*class-validator.*",
    # pkg_resources 弃用 (milvus_lite / pymilvus)
    "ignore:.*pkg_resources is deprecated.*:UserWarning",
    "ignore:.*pkg_resources.*:DeprecationWarning",
    # sentence_transformers 版本不匹配
    "ignore:.*created with version.*:UserWarning",
    # cryptography ARC4 弃用 (pypdf 内部)
    "ignore:.*ARC4 has been moved.*:cryptography.utils.CryptographyDeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy"]
files = ["src"]
exclude = [
    "tests/",
    "build/",
    "dist/",
]

[tool.pyright]
extraPaths = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.10"
venvPath = "."
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories to exclude
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "EXE", "FBT", "ICN", "G", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "RSE", "RET", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
ignore = ["E501", "W503", "E203"]
extend-ignore = []

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "S311", "F841"]
